--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="app_blue1">#052E97</color>
+    <color name="app_blue2">#021561</color>
+    <color name="app_blue3">#DDE2FA</color>
+    <color name="app_blue4">#1F3074</color>
+    <color name="app_blue5">#3E6FCC</color>
 </resources>
