--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,15 +2,46 @@
     <!-- Base application theme. -->
     <style name="Theme.ImpelArticle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/app_blue1</item>
+        <item name="colorPrimaryVariant">@color/app_blue1</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/app_blue1</item>
+        <item name="colorSecondaryVariant">@color/app_blue1</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="ThemeImpelArticle" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/app_blue1</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimaryDark">@color/app_blue1</item>
+        <item name="colorAccent">@color/black</item>
+        <item name="colorSurface">@color/app_blue1</item>
+        <item name="colorOnSurface">@color/app_blue1</item>
+        <item name="colorSecondary">@color/app_blue1</item>
+        <item name="colorOnSecondary">@color/app_blue1</item>
+        <item name="colorBackgroundFloating">@color/white</item>
+        <item name="android:colorBackground">@color/app_blue1</item>
+        <item name="backgroundTint">@color/app_blue1</item>
+        <item name="colorOnBackground">@color/app_blue1</item>
+        <item name="colorError">@color/app_blue1</item>
+        <item name="colorOnError">@color/app_blue1</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorControlNormal">@color/app_blue1</item>
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
+    </style>
+
+    <style name="WindowAnimationTransition">
+        <item name="android:windowEnterAnimation">@android:anim/slide_in_left</item>
+        <item name="android:windowExitAnimation">@android:anim/slide_out_right</item>
+    </style>
+
+    <style name="AppCompatAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/app_blue1</item>
+        <item name="android:textSize">22sp</item>
     </style>
 </resources>
