--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="app_blue3">#DDE2FA</color>
     <color name="app_blue4">#1F3074</color>
     <color name="app_blue5">#3E6FCC</color>
+    <color name="app_blue6">#00146B</color>
+    <color name="app_blue7">#8595CC</color>
+
 </resources>
